syntax = "proto3";

option csharp_namespace = "Application.Grpc";

package DocumentRecognition;

service DocumentRecognitionService{
    rpc DocumentClassification(DocumentRequest) returns (DocumentReply);
}

message DocumentRequest {
    bytes data = 1;
}

message DocumentReply{
    enum DocumentType{
        NOT_COMPUTED = 0;
    }
}
